# KeyBox

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/01-plan/features/: keybox-v0.2.0.plan.md  keybox.plan.md
docs/02-design/features/: keybox.design.md
docs/03-analysis/: KeyBox-bugfix.analysis.md  keybox.analysis.md
docs/04-report/: KeyBox-bugfix.report.md  keybox.report.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/commands/: auth.rs  category.rs  export.rs  mod.rs  project.rs  secret.rs
src-tauri/src/crypto/: aes_gcm_cipher.rs  argon2_kdf.rs  hkdf_derive.rs  mod.rs
src-tauri/src/db/: connection.rs  migrations.rs  queries.rs
src-tauri/src/models/: category.rs  mod.rs  project.rs  secret.rs
src/components/: CategoryForm.tsx  ProjectForm.tsx  SearchBar.tsx  SecretDetail.tsx  SecretForm.tsx  SecretList.tsx  SettingsModal.tsx  Sidebar.tsx  Toast.tsx
src/lib/: commands.ts  useAutoLock.ts  utils.ts
src/pages/: LockScreen.tsx  MainScreen.tsx  SetupScreen.tsx
src/stores/: authStore.ts  categoryStore.ts  projectStore.ts  secretStore.ts
src/types/: index.ts
